# A5

./: CMakeLists.txt  a5  a5.cpp  abstract_player.h  bestMove.h  board.h  choices.h  computer_player.h  computer_player2.h  human_player.h  legalMove.h
